[gd_scene load_steps=9 format=3 uid="uid://c20jir7upg23u"]

[ext_resource type="Script" path="res://Rooms/StraightRoom.gd" id="1_xthrk"]
[ext_resource type="Texture2D" uid="uid://nob2fow1srh7" path="res://Assets/testRoom.png" id="2_edjlw"]
[ext_resource type="PackedScene" uid="uid://l2lheh7f04fq" path="res://Rooms/CornerUpRoom.tscn" id="2_rpl73"]
[ext_resource type="Script" path="res://Rooms/DoorUp.gd" id="3_0c1t5"]
[ext_resource type="PackedScene" uid="uid://cwwxp15txlvsa" path="res://Rooms/ThreeJunctionRoom.tscn" id="3_a1umw"]
[ext_resource type="PackedScene" uid="uid://cg0bfq1gxofag" path="res://Rooms/FourJunctionRoom.tscn" id="4_yvbui"]
[ext_resource type="PackedScene" uid="uid://b50wpv41rnq3f" path="res://Rooms/DeadEndRoom.tscn" id="5_ruskw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m50nv"]
atlas = ExtResource("2_edjlw")
region = Rect2(48, 16, 16, 16)

[node name="StraightRoom" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_xthrk")
ID = 8
straightRoom = null
cornerUpRoom = ExtResource("2_rpl73")
threeJuncRoom = ExtResource("3_a1umw")
fourJuncRoom = ExtResource("4_yvbui")
deadEndRoom = ExtResource("5_ruskw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_m50nv")

[node name="DoorUp" type="Node2D" parent="."]
position = Vector2(0, -7.5)
script = ExtResource("3_0c1t5")
ID = 1

[node name="DoorDown" type="Node2D" parent="."]
position = Vector2(0, 7.5)
script = ExtResource("3_0c1t5")
ID = 1

[node name="Camera2D" type="Camera2D" parent="."]
